# Lambda

./: CMakeLists.txt  README.md
.workflows/: run.bat
LambdaC/: MethodExtraction.cpp  README.md  lib.h
LambdaC/FileTree/: LambdaCLib.cpp  LambdaCLib.h
lambdabot/: README.md  index.js  package-lock.json  package.json  port.json
lambdabot/api/: init.js  smp_events.js
lambdabot/caches/Infi SMP/commands/: poggers.js
lambdabot/caches/Infi SMP/configurations/: config.json
lambdabot/caches/Mi SMP/: prefix.json
lambdabot/caches/Mi SMP/configurations/: config.json
lambdabot/caches/users/udir/: guild.json
lambdabot/commands/: say.js
lambdabot/public/plugins/sampleplugin/: main.js  plugin.json
